Add ZIMA-Tables logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{% trans "Mechanical tables" %}</title>
+    <title>{% trans "ZIMA-Tables" %}</title>
 		{% block head %}{% endblock %}
     {% block css %}
       <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -25,7 +25,10 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-						<img src="{% static 'img/logo.png' %}" alt="{% trans "Mechanical-tables.org" %}">
+						<img
+							src="{% static 'img/zima-tables.png' %}"
+							alt="{% trans "Mechanical-tables.org" %}"
+							width="200">
 					</a>
         </div>
 
