--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,29 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
-  padding-top: 50px;
+    padding-top: 50px;
+
+    /* Margin for footer */
+    margin-bottom: 40px;
 }
 
 .navbar-brand img {
     position: relative;
     top: -20px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: #f5f5f5;
+}
+
+.footer p {
+    margin: 0;
+    padding: 10px;
 }
