--- a/templates/base.html
+++ b/templates/base.html
@@ -115,11 +115,18 @@
         {% block content %}
         {% endblock %}
       </div>
-      <div class="row">
-        <div class="col-md-12 text-right">
-          <p>&copy; 2016 <a href="http://www.zima-engineering.cz">ZIMA-Engineering</a></p>
-        </div>
-      </div>
     </div>
+
+		<footer class="footer">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-4">
+						<p class="text-right">
+						&copy; 2016 <a href="http://www.zima-engineering.cz">ZIMA-Engineering</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</footer>
   </body>
 </html>
