Remove Home from main menu
This item was redundant, as the logo already links to the home page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+					<a class="navbar-brand" href="{% url 'home' %}">
 						<img
 							src="{% static 'img/zima-tables.png' %}"
 							alt="{% trans "Mechanical-tables.org" %}"
@@ -34,10 +34,6 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="{% block home_active %}{% endblock %}">
-							<a href="{% url 'home' %}">{% trans "Home" %}</a>
-						</li>
-
 						{% for ds in zwp_data_sources %}
 							<li {% if zwp_dir and zwp_dir.ds.name == ds.name %}class="active"{% endif %}>
 								<a href="{{ ds.url }}">{{ ds.label }}</a>
