--- a/templates/zwp/base.html
+++ b/templates/zwp/base.html
@@ -31,6 +31,18 @@
   {% endfor %}
 {% endblock %}
 
+{% block messages %}
+	<div class="col-md-9 col-md-offset-3">
+		{% if messages %}
+			{% for message in messages %}
+				<div class="alert {{ message.tags }}" role="alert">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endif %}
+	</div>
+{% endblock %}
+
 {% block content %}
 	<div class="col-md-3 sidebar" id="zwp-nav">
 		{% block zwp_menu %}
