--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 		{% block js_head %}
 			<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 			<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+			<script type="text/javascript" src="{% static 'js/zima-tables.js' %}"></script>
 		{% endblock %}
 	</head>
 	<body>
@@ -63,7 +64,7 @@
 						{% for lang, label in LANGUAGES %}
 							{% if current_lang != lang %}
 								<li>
-									<a href="/{{ lang }}">
+									<a data-lang-code="{{ lang }}" href="/{{ lang }}">
 										<img src="{% static 'img/flags/' %}{{ lang }}.png" alt="{{ label }}">
 									</a>
 								</li>
