--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,6 +15,20 @@ body {
     top: -20px;
 }
 
+nav form {
+    display: none;
+}
+
+@media (min-width: 1450px) {
+    nav ul.sign-in {
+        display: none;
+    }
+    
+    nav form {
+        display: block;
+    }
+}
+
 .lang-switch li a{
     padding: 14px 12px 0 3px;
     outline: none;
