--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,14 +10,34 @@
 	<p>{% trans "You are already logged in." %}
 
 {% else %}
-<form action="{% url 'login' %}" method="post">
+	
+{% if form.non_field_errors %}
+	{% for error in form.non_field_errors %}
+		<div class="alert alert-warning text-center" role="alert">
+			{{ error }}
+		</div>
+	{% endfor %}
+{% endif %}
+
+<form action="{% url 'login' %}" method="post" class="form-horizontal">
 	{% csrf_token %}
-	<table>
-		{{ form }}
-		<tr>
-			<td colspan="2"><input type="submit" value="{% trans "Login" %}"></td>
-		</tr>
-	</table>
+	<div class="form-group">
+		<label for="username" class="col-sm-offset-2 col-sm-2 control-label">{% trans "Username" %}:</label>
+		<div class="col-sm-4">
+			<input type="text" name="username" value="{{ form.username.value|default:'' }}" class="form-control">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="password" class="col-sm-offset-2 col-sm-2 control-label">{% trans "Password" %}:</label>
+		<div class="col-sm-4">
+			<input type="password" name="password" class="form-control">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-offset-4 col-sm-4">
+			<input type="submit" value="{% trans "Sign in" %}" class="btn btn-default">
+		</div>
+	</div>
 </form>
 {% endif %}
 {% endblock %}
