--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 		{% block head %}{% endblock %}
 		{% block css %}
 			<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+			<link rel="stylesheet" href="{% static 'lightbox/css/lightbox.min.css' %}">
 			<link rel="stylesheet" href="{% static 'css/main.css' %}">
 			<link rel="stylesheet" href="{% static 'css/zwp.css' %}">
 		{% endblock %}
@@ -139,5 +140,6 @@
 				</div>
 			</div>
 		</footer>
+		<script type="text/javascript" src="{% static 'lightbox/js/lightbox.min.js' %}"></script>
 	</body>
 </html>
