--- a/static/css/zwp.css
+++ b/static/css/zwp.css
@@ -37,3 +37,33 @@ div.tab-active {
 tr.striped {
     background-color: #f9f9f9;
 }
+
+td.checkall, th.checkall {
+    width: 30px;
+}
+
+th.part {
+    width: 40%;
+}
+
+span.selected-download {
+    color: #cbcbcb;
+    font-size: 16px;
+    margin-right: 10px;
+}
+span.selected-download.enabled {
+    color: #adadad;
+}
+
+.btn-download {
+    color: #ffffff;
+    font-size: 16px;
+    min-width: 185px;
+    height: 40px;
+    background: #cbcbcb url('../img/download_arrow.png') 6px 3px no-repeat;
+    text-align: right;
+}
+
+.btn-download.enabled {
+    background-color: #80aa18;
+}
