Show number of parts marked for download in a badge

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,12 @@
 						{% endfor %}
 
 						<li class="{% block downloads_active %}{% endblock %}">
-							<a href="{% url 'zwp_downloads' %}">{% trans "Downloads" %}</a>
+							<a href="{% url 'zwp_downloads' %}">
+								{% trans "Downloads" %}
+								{% if download_batch %}
+									<span class="badge">{{ download_batch.count }}</span>
+								{% endif %}
+							</a>
 						</li>
 						<li class="{% block news_active %}{% endblock %}">
 							<a href="#">{% trans "News" %}</a>
