Set padding-top for messages and #zwp-content

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,6 +34,10 @@ nav form {
     outline: none;
 }
 
+.messages, #zwp-content {
+    padding-top: 10px;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
