--- a/templates/base.html
+++ b/templates/base.html
@@ -117,15 +117,15 @@
 		<div class="container-fluid">
 			<div class="row">
 				{% block messages %}
-				<div class="col-md-8 col-md-offset-2">
-					{% if messages %}
-						{% for message in messages %}
-							<div class="alert {{ message.tags }}" role="alert">
-								{{ message }}
-							</div>
-						{% endfor %}
-					{% endif %}
-				</div>
+				{% if messages %}
+					<div class="col-md-8 col-md-offset-2 messages">
+							{% for message in messages %}
+								<div class="alert {{ message.tags }}" role="alert">
+									{{ message }}
+								</div>
+							{% endfor %}
+					</div>
+				{% endif %}
 				{% endblock %}
 			</div>
 			<div class="row">
