--- a/templates/zwp/base.html
+++ b/templates/zwp/base.html
@@ -32,15 +32,15 @@
 {% endblock %}
 
 {% block messages %}
-	<div class="col-md-9 col-md-offset-3">
-		{% if messages %}
-			{% for message in messages %}
-				<div class="alert {{ message.tags }}" role="alert">
-					{{ message }}
-				</div>
-			{% endfor %}
-		{% endif %}
-	</div>
+	{% if messages %}
+		<div class="col-md-9 col-md-offset-3 messages">
+				{% for message in messages %}
+					<div class="alert {{ message.tags }}" role="alert">
+						{{ message }}
+					</div>
+				{% endfor %}
+		</div>
+	{% endif %}
 {% endblock %}
 
 {% block content %}
